@startuml

title __SIGN_IN's Class Diagram__\n

  namespace com.pis.buy2gether {
    namespace usecases.onboarding.sign_in {
      class com.pis.buy2gether.usecases.onboarding.sign_in.RegisterActivity {
          - guest : Button
          - log : Button
          - pswEditText : TextInputEditText
          - sign : ImageButton
          - userEditText : TextInputEditText
          - usernameEditText : TextInputEditText
          # onCreate()
          - animateBackground()
          - setup()
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace usecases.onboarding.sign_in {
      class com.pis.buy2gether.usecases.onboarding.sign_in.RegisterViewModel {
          - context : Context
          + saveUserInfo()
          + shakeError()
          ~ RegisterViewModel()
          ~ showAlert()
          ~ showHome()
      }
    }
  }
  

  com.pis.buy2gether.usecases.onboarding.sign_in.RegisterActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.pis.buy2gether.usecases.onboarding.sign_in.RegisterActivity o-- com.pis.buy2gether.usecases.onboarding.sign_in.RegisterViewModel : viewModel
  com.pis.buy2gether.usecases.onboarding.sign_in.RegisterViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
